--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psutil==5.9.5
 pydantic==2.3.0
 pydantic_core==2.6.3
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
